# TP_FINAL

./: CMakeLists.txt  arbolCliente.c  arbolCliente.h  main.c
arbolCliente/: arbolCliente.c  arbolCliente.h
arbolClientes/: arbolCliente.c  arbolCliente.h
celdaCuenta/: celdaCuenta.c  celdaCuenta.h
interfaces/: interfaces.c  interfaces.h  menu-principal.txt
interfaces/clientes/: menu-clientes.txt  menu-crear-cliente.txt
interfaces/cuentas/: menu-cuentas.txt
interfaces/movimientos/: menu-movimientos.txt
interfaces/otros/: menu-otros.txt
listaMovimientos/: listaMovimientos.c  listaMovimientos.h
menues/: menu.c  menu.h
menues/clientes/: menuClientes.c  menuClientes.h
menues/cuentas/: menuCuentas.c  menuCuentas.h
menues/movimientos/: menuMovimientos.c  menuMovimientos.h
menues/navegacion/: navegacion.c  navegacion.h
menues/otros/: menuOtros.c  menuOtros.h
operaciones/clientes/: opClientes.c  opClientes.h
operaciones/cuentas/: opCuentas.c  opCuentas.h
operaciones/movimientos/: opMovimientos.c  opMovimientos.h
operaciones/otros/: otros.c  otros.h
persistencias/clientes/: persistenciaClientes.c  persistenciaClientes.h
persistencias/cuentas/: persistenciaCuentas.c  persistenciaCuentas.h
persistencias/movimientos/: persistenciaMovimientos.c  persistenciaMovimientos.h
utils/: utils.c  utils.h
